--- a/package.json
+++ b/package.json
@@ -16,7 +16,5 @@
     "url": "https://github.com/gracewingo/till-hw/issues"
   },
   "homepage": "https://github.com/gracewingo/till-hw#readme",
-  "dependencies": {
-    "date-fns": "^2.8.1"
-  }
+  "dependencies": {}
 }
